Fix z-index issue

--- a/static/assets/sass/base/_webinar.scss
+++ b/static/assets/sass/base/_webinar.scss
@@ -717,7 +717,7 @@ $poppins: "Poppins", sans-serif;
   position: sticky;
   top: 61px;
   background-color: #fff;
-  z-index: 99;
+  z-index: 9;
 }
 /****************************************
 Responsive Classes
